--- a/style.css
+++ b/style.css
@@ -1,44 +1,40 @@
-@import url("./styles/normalize.css");
-@import url("./styles/fonts.css");
-
-body {
-  background: #000000;
-  margin: 0;
-}
-
+/* 
 .page {
+	height: 100%;
   font-family: Inter, arial, sans-serif;
   color: #ffffff;
+  background: #000000;
+
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
-}
+} */
 
-.block {
+/* .block {
   max-width: 882px;
-}
+} */
 
-.button:hover {
+/* .button:hover {
   opacity: 0.7;
-}
+} */
 /*********************************************************/
-
+/* 
 .header {
   min-height: 74px;
   margin: auto;
-  margin-top: 45px;
+  padding-top: 45px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.7);
 }
 .header__logo {
   width: 173px;
   height: 33px;
-}
+} */
 
 /*********************************************************/
-.profile {
+/* .profile {
   margin: auto;
   margin-top: 40px;
   display: flex;
@@ -69,7 +65,7 @@ body {
 }
 
 .profile__about-me {
-	max-width: 400px;
+  max-width: 400px;
 
   margin: 16px 0 0 0;
   font-style: normal;
@@ -82,7 +78,6 @@ body {
   width: 24px;
   height: 24px;
   padding: 6px;
-
   background-color: black;
   background-image: url(./images/pencil.png);
   background-repeat: no-repeat;
@@ -102,10 +97,10 @@ body {
   border: 2px solid #ffffff;
   box-sizing: border-box;
   border-radius: 2px;
-}
+} */
 
 /********************************************************/
-.elements {
+/* .elements {
   margin: auto;
   margin-top: 51px;
 }
@@ -145,11 +140,12 @@ body {
   font-size: 24px;
   line-height: 29px;
   color: black;
-}
+} */
 
 /**************************************/
-.footer {
-  margin: 66px auto 60px;
+/* .footer {
+  margin: 66px auto 0;
+  padding-bottom: 60px;
 }
 .footer__copyright {
   margin: 0;
@@ -159,34 +155,34 @@ body {
   line-height: 22px;
 
   color: #545454;
-}
+} */
 
 /**********************************/
-
+/* 
 .edit-form {
-	display: none;
+  display: none;
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
+
 }
 
 .edit-form__pop-up {
   min-width: 430px;
   height: 330px;
-
   background: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-
   background-color: white;
   position: absolute;
   top: 195px;
   left: 50%;
   transform: translateX(-50%);
 }
+
 .edit-form__close {
   width: 50px;
   height: 50px;
@@ -213,7 +209,6 @@ body {
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-
   color: #000000;
 }
 
@@ -224,9 +219,9 @@ body {
   font-weight: normal;
   font-size: 14px;
   line-height: 25px;
-
   color: #000000;
 }
+
 .edit-form__input_name {
   margin-top: 54px;
 }
@@ -249,21 +244,23 @@ body {
 
   color: #ffffff;
 }
-.popup_opened{
-	display: flex;
-}
+.popup_opened {
+  display: flex;
+} */
 /*************************************/
-
+/* 
 @media screen and (max-width: 720px) {
   .block_s {
     max-width: 600px;
   }
+
   .header {
     min-height: 56px;
     margin: auto;
     margin-top: 28px;
     border-bottom: 1px solid rgba(33, 33, 33, 0.7);
   }
+
   .header__logo {
     width: 126px;
     height: 24px;
@@ -302,29 +299,26 @@ body {
     margin-top: 36px;
   }
   .footer {
-    margin: 48px 0 36px 19px;
+    margin: 48px 0 0 19px;
+    padding-bottom: 36px;
   }
-  .footer__copyright{
-	font-size: 14px;
-	line-height: 17px;
-	
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 17px;
   }
-
 }
 
-
-@media screen and (max-width:480px){
-	
-	.edit-form__pop-up{
-		min-width: 250px;
-	}
-	.edit-form__close{
-		width:20px;
-		height: 20px;
-		top: -20px;
-		right: -20px;
-	}
-	.edit-form__form{
-		max-width: 200px;
-	}
-}
+@media screen and (max-width: 480px) {
+  .edit-form__pop-up {
+    min-width: 250px;
+  }
+  .edit-form__close {
+    width: 20px;
+    height: 20px;
+    top: -20px;
+    right: -20px;
+  }
+  .edit-form__form {
+    max-width: 200px;
+  }
+} */
