--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 @import url("../styles/normalize.css");
 @import url("../styles/fonts.css");
+@import url("../blocks/button/button.css");
 @import url("../blocks/page/page.css");
 @import url("../blocks/block/block.css");
 @import url("../blocks/header/header.css");
