--- a/blocks/edit-form/__input/edit-form__input.css
+++ b/blocks/edit-form/__input/edit-form__input.css
@@ -1,3 +1,6 @@
+@import url("./_margin/_about-me/edit-form__input_margin_about-me.css");
+@import url("./_margin/_name/edit-form__input_margin_name.css");
+
 .edit-form__input {
 	border: none;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
