--- a/blocks/edit-form/edit-form.css
+++ b/blocks/edit-form/edit-form.css
@@ -1,15 +1,13 @@
 @import url("./__close/edit-form__close.css");
 @import url("./__form/edit-form__form.css");
 @import url("./__input/edit-form__input.css");
-@import url("./__about-me-input/edit-form__about-me-input.css");
-@import url("./__name-input/edit-form__name-input.css");
 @import url("./__pop-up/edit-form__pop-up.css");
 @import url("./__submit/edit-form__submit.css");
 @import url("./__title/edit-form__title.css");
 
 .edit-form {
   display: none;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
