--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,14 +4,12 @@
   min-height: 74px;
   margin: auto;
   padding-top: 45px;
-  border-bottom: 1px solid rgba(33, 33, 33, 0.7);
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 720px) {
   .header {
     min-height: 56px;
-    margin: auto;
-    margin-top: 28px;
-    border-bottom: 1px solid rgba(33, 33, 33, 0.7);
+    padding-top: 28px;
   }
 }
