--- a/blocks/edit-form/__close/edit-form__close.css
+++ b/blocks/edit-form/__close/edit-form__close.css
@@ -6,7 +6,7 @@
   top: -42px;
   background-color: rgba(0, 0, 0, 0);
   border: none;
-  background-image: url("../../../images/Close\ Icon.png");
+  background-image: url("../../../images/close-icon.png");
   background-position: center;
   background-repeat: no-repeat;
 }
