--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -1,4 +1,11 @@
-.elements__like{
-	height: 18.13px;
+.elements__like {
+  width: 20.76px;
+  height: 18.13px;
 
+  background-image: url("../../../images/heart.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
 }
