--- a/blocks/elements/__location-name/elements__location-name.css
+++ b/blocks/elements/__location-name/elements__location-name.css
@@ -1,7 +1,11 @@
 .elements__location-name {
+  height: 30px;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   color: black;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
