--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,4 +1,4 @@
-.edit-form__close {
+.popup__close {
   width: 50px;
   height: 50px;
   position: absolute;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .edit-form__close {
+  .popup__close {
     width: 20px;
     height: 20px;
     top: -20px;
