--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,4 @@
-.edit-form__form {
+.popup__form {
   display: flex;
   flex-direction: column;
   max-width: 358px;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .edit-form__form {
+  .popup__form {
     max-width: 200px;
   }
 }
