--- a/pages/index.css
+++ b/pages/index.css
@@ -6,5 +6,5 @@
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/footer/footer.css");
-@import url("../blocks/edit-form/edit-form.css");
-@import url("../blocks/popup-opened/popup-opened.css");
+@import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/_opened/popup_opened.css");
