--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -1,4 +1,9 @@
 .elements__image {
   width: 282px;
   height: 282px;
+  border-radius: 10px 10px 0 0;
+}
+
+.elements__image:hover {
+  cursor: pointer;
 }
