--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,9 +1,11 @@
 @import url("./__list-item/elements__list-item.css");
+@import url("./__trash/elements__trash.css");
 @import url("./__image/elements__image.css");
 @import url("./__list/elements__list.css");
 @import url("./__like/elements__like.css");
 @import url("./__location-name/elements__location-name.css");
 @import url("./__title-container/elements__title-container.css");
+@import url("./__like/_liked/elements__like_liked.css");
 
 .elements {
   margin: auto;
