--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,14 +4,20 @@
 @import url("./__dialog-window/popup__dialog-window.css");
 @import url("./__submit/popup__submit.css");
 @import url("./__title/popup__title.css");
+@import url("./__image-container/popup__image-container.css");
+@import url("./__full-size-image/popup__full-size-image.css");
+@import url("./__image-caption/popup__image-caption.css");
 
 .popup {
-  display: none;
+  display: block;
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   top: 0;
   left: 0;
   color: black;
+  visibility: hidden;
+  transition: opacity 0.5s;
+  opacity: 0;
 }
