--- a/blocks/popup/__image-container/popup__image-container.css
+++ b/blocks/popup/__image-container/popup__image-container.css
@@ -1,6 +1,8 @@
 .popup__image-container {
   position: absolute;
-  max-width: 100%;
+  /* max-width: 100%; */
+  max-width: 75vw;
+  max-height: 75vh;
   top: 90px;
   left: 50%;
   transform: translateX(-50%);
