--- a/blocks/popup/__input/_margin/_bottom-input/popup__input_margin_bottom-input.css
+++ b/blocks/popup/__input/_margin/_bottom-input/popup__input_margin_bottom-input.css
@@ -1,3 +1,9 @@
 .popup__input_margin_bottom-input {
-  margin-top: 30px;
+  margin-top: 13px;
 }
+
+@media screen and (max-width: 480px) {
+	.popup__input_margin_bottom-input {
+		margin-top: 20px;
+	}
+  }
