--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,6 +7,13 @@
 @import url("./__image-container/popup__image-container.css");
 @import url("./__full-size-image/popup__full-size-image.css");
 @import url("./__image-caption/popup__image-caption.css");
+@import url("./__figure-container/popup__figure-container.css");
+
+@import url("./__input/_type/_error/popup__input_type_error.css");
+@import url("./__input-error/popup__input-error.css");
+@import url("./__input-error/_visible/popup__input-error_visible.css");
+
+@import url("../button/_inactive/button_inactive.css");
 
 .popup {
   display: block;
@@ -18,6 +25,6 @@
   left: 0;
   color: black;
   visibility: hidden;
-  transition: opacity .5s, visibility .5s;
+  transition: opacity .3s, visibility .3s;
   opacity: 0;
 }
