--- a/blocks/popup/__full-size-image/popup__full-size-image.css
+++ b/blocks/popup/__full-size-image/popup__full-size-image.css
@@ -1,4 +1,5 @@
 .popup__full-size-image {
-  max-width: 75vw;
-  max-height: 75vh;
+  /* max-width: 75vw;
+  max-height: 75vh; */
+  max-width: 100%;
 }
