--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -2,7 +2,7 @@
 .popup__input-error {
 	visibility: hidden;
   height: 24px;
-  font-family: Inter;
+  font-family: 'Inter','Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
