--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -1,8 +1,8 @@
-.button{
-	transition: opacity 0.3s;
+.button {
+  transition: opacity 0.3s ease-in-out;
 }
 
 .button:hover {
-	opacity: 0.7;
-	cursor: pointer;
-  }
+  opacity: 0.7;
+  cursor: pointer;
+}
