--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -6,6 +6,8 @@
 @import url("./__location-name/elements__location-name.css");
 @import url("./__title-container/elements__title-container.css");
 @import url("./__like/_liked/elements__like_liked.css");
+@import url("./__like-container/elements__like-container.css");
+@import url("./__number-likes/elements__number-likes.css");
 
 .elements {
   margin: auto;
