--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -14,6 +14,8 @@
 @import url("./__input-error/_visible/popup__input-error_visible.css");
 
 @import url("../button/_inactive/button_inactive.css");
+@import url("../popup/__dialog-window/_delete/popup__dialog-window_delete.css");
+
 
 .popup {
   display: block;
