--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,11 @@
 .profile__avatar {
-  max-width: 120px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   margin-right: 30px;
 }
+
+
 
 @media screen and (max-width: 720px) {
   .profile__avatar {
