--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -5,6 +5,7 @@
 @import url("./__info/profile__info.css");
 @import url("./__name-container/profile__name-container.css");
 @import url("./__name/profile__name.css");
+@import url("./__avatar-button/profile__avatar-button.css");
 
 .profile {
   margin: auto;
